[gd_scene load_steps=2 format=3 uid="uid://ewaovw0m3vvb"]

[ext_resource type="Script" path="res://Scenes/death_popup.gd" id="1_fl8vd"]

[node name="DeathPopup" type="TextureRect"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fl8vd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "YOU ARE DEAD !!"
horizontal_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
